--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <section id="selecao">
             <h3 class="centralizado">OUTROS TIPOS DE ODS</h3>
             <div class="coluna quatro centralizado">
+                 <img class="icone" src="img/city.png" alt="Laranja" />
                 <img class="icone" src="img/city.png" alt="Laranja" />
                 <h4>FOME ZERO</h4>
                 <p>Até 2030, erradicar a pobreza extrema para todas as pessoas em todos os lugares, atualmente medida como pessoas vivendo com menos de US$ 1,90 por dia.</p>
